--- a/VIPER.xcodeproj/xcshareddata/xcschemes/VIPER.xcscheme
+++ b/VIPER.xcodeproj/xcshareddata/xcschemes/VIPER.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "A0FAC2F327D27A8F00F2AF17"
+               BuildableName = "VIPERTests.xctest"
+               BlueprintName = "VIPERTests"
+               ReferencedContainer = "container:VIPER.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
